Website protoype - functional
A functional protoype of the website

--- a/Crime Map - Theft.ipynb
+++ b/Crime Map - Theft.ipynb
@@ -143,15 +143,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\griff\\\\Desktop\\\\Computer Science\\\\Ethics of Algorithms Code\\\\clusteredcrimemaps\\\\maps_view\\\\theftmap.html'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from bokeh.palettes import PuBu as Palette\n",
     "\n",
-    "output_file(\"TheftMap.html\")\n",
+    "#output_file(\"theftmap.html\")\n",
     "palette = Palette[9]\n",
     "palette = palette[::-1]\n",
     "color_mapper = LogColorMapper(palette=palette)\n",
@@ -162,7 +173,7 @@
     "                  ('Time of Crime','@Time'),]\n",
     "\n",
     "p = figure(title=\"Theft in Milwaukee from 1/1/2015 to 1/31/2015\", plot_width = 500, plot_height=750, toolbar_location=None,\n",
-    "           active_drag ='pan', active_scroll='wheel_zoom', responsive =True)\n",
+    "           active_drag ='pan', active_scroll='wheel_zoom',)\n",
     "p.axis.visible = False\n",
     "\n",
     "p.patches('x', 'y', source = s_source, fill_alpha=0.8, line_color=\"black\", line_width=.3,\n",
@@ -171,9 +182,18 @@
     "p.add_tools(hover)\n",
     "\n",
     "show(p)\n",
-    "# outfp = r\"./CrimeData/map.html\"\n",
-    "# save(p, outfp)\n"
+    "outfp = r\"./maps_view/theftmap.html\"\n",
+    "save(p, outfp)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
