House-cleaning and readme update

--- a/griffin/data_2015/Crime Map - Data Conversion and Formatting.ipynb
+++ b/griffin/data_2015/Crime Map - Data Conversion and Formatting.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook takes the raw data found in multiple files within the \"raw\" folder and places them all into one file for a given month. The data is separated into motor vehicle theft and theft and finally geocoded so that it can be used in the map construction."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -9,7 +16,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "import geocoder\n",
+    "import requests"
    ]
   },
   {
@@ -28,6 +37,7 @@
     "            file_list.append(data)\n",
     "   \n",
     "    df = pd.concat(file_list, ignore_index=True)\n",
+    "    \n",
     "    columns = ['Incident Number','Date', 'Time', 'Police District','Offense 1',\n",
     "          'Offense 2', 'Offense 3', 'Offense 4', 'Offense 5', 'Location']\n",
     "    df.columns = columns\n",
@@ -46,8 +56,7 @@
     "        if count.empty:\n",
     "            df = df.drop(count.name, axis = 1)\n",
     "            \n",
-    "    df.to_csv('./raw/' + folder + 'Complete.csv', sep=';', index = False)\n",
-    "    "
+    "    df.to_csv('./raw/' + folder + 'Complete.csv', sep=';', index = False)"
    ]
   },
   {
@@ -58,16 +67,13 @@
    },
    "outputs": [],
    "source": [
-    "import geocoder\n",
-    "import requests\n",
-    "\n",
-    "\n",
     "def address_to_latlong(address):\n",
+    "    '''Returns the latitude and longitude for a given address'''\n",
     "    address += \", Milwaukee, WI\"\n",
     "    location = geocoder.arcgis(address, session = session)\n",
     "    if not location.latlng:\n",
     "        print(\"Couldn't Parse: \"  + address )\n",
-    "    return location.latlng\n"
+    "    return location.latlng"
    ]
   },
   {
@@ -89,11 +95,10 @@
     "        \n",
     "        for off_1, off_2, off_3 in zipped:\n",
     "            if(not keyword in off_1[1].lower() and\n",
-    "                (pd.isnull(off_2[1]) or not keyword in off_2[1].lower()) and\n",
-    "                (pd.isnull(off_3[1]) or not keyword in off_3[1].lower())):\n",
+    "              (pd.isnull(off_2[1]) or not keyword in off_2[1].lower()) and\n",
+    "              (pd.isnull(off_3[1]) or not keyword in off_3[1].lower())):\n",
     "                df = df.drop(off_1[0])\n",
-    "                \n",
-    "                \n",
+    " \n",
     "        df['Address'] = df['Location'].copy()\n",
     "            \n",
     "        theft = df.copy()\n",
@@ -113,27 +118,15 @@
     "                \n",
     "        \n",
     "        with requests.Session() as session:\n",
+    "            # This is likely to be very slow\n",
+    "            # depending on the geocoding service used\n",
     "            theft['Location'] = theft['Location'].apply(address_to_latlong)\n",
     "            m_theft['Location'] = m_theft['Location'].apply(address_to_latlong)\n",
     "            \n",
     "        theft.to_csv('./' + 'theft_' + file.split('Complete.csv')[0] + '.csv', sep=';', index = False)\n",
     "        m_theft.to_csv('./' + 'm_theft_' + file.split('Complete.csv')[0] + '.csv', sep=';', index = False)\n",
-    "        print(f'Finished {file}')\n",
-    "        \n",
-    "        \n",
-    "\n",
-    "        \n",
-    "theft"
+    "        print(f'Finished {file}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
