--- a/griffin/data_2015/index/Potential Bias Index - Calculation and Formatting.ipynb
+++ b/griffin/data_2015/index/Potential Bias Index - Calculation and Formatting.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook is mostly depreciated as it uses calculation for the potential bias index based on direct comparison between paired geodesic and euclidean clusters. This calculation is more usefully done with a different method within the graph html files."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
