--- a/griffin/earlier_prototypes/Crime Map - Theft.ipynb
+++ b/griffin/earlier_prototypes/Crime Map - Theft.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook is largely depreciated and was used to draw an initial prototype of the map using Bokeh. This method was replaced with the more robust maps created with d3, which can be found in the html files."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -185,15 +192,6 @@
     "outfp = r\"./maps_view/theftmap.html\"\n",
     "save(p, outfp)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
