updated map to use full dataset, and fixed some links

--- a/griffin/KMeans/KMeans - primary.ipynb
+++ b/griffin/KMeans/KMeans - primary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -160,6 +160,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -237,14 +238,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "theft_jan.js\n",
+      "theft_feb.js\n",
+      "theft_mar.js\n",
+      "theft_april.js\n",
+      "theft_may.js\n",
+      "theft_june.js\n",
+      "theft_july.js\n",
+      "theft_aug.js\n",
+      "theft_sep.js\n",
+      "theft_oct.js\n",
+      "theft_nov.js\n",
+      "theft_dec.js\n",
+      "m_theft_jan.js\n",
+      "m_theft_feb.js\n",
+      "m_theft_mar.js\n",
+      "m_theft_april.js\n",
+      "m_theft_may.js\n",
+      "m_theft_june.js\n",
+      "m_theft_july.js\n",
+      "m_theft_aug.js\n",
+      "m_theft_sep.js\n",
+      "m_theft_oct.js\n",
+      "m_theft_nov.js\n",
+      "m_theft_dec.js\n",
+      "theft_jan.js\n",
+      "theft_feb.js\n",
+      "theft_mar.js\n",
+      "theft_april.js\n",
+      "theft_may.js\n",
+      "theft_june.js\n",
+      "theft_july.js\n",
+      "theft_aug.js\n",
+      "theft_sep.js\n",
+      "theft_oct.js\n",
+      "theft_nov.js\n",
+      "theft_dec.js\n",
+      "m_theft_jan.js\n",
+      "m_theft_feb.js\n",
+      "m_theft_mar.js\n",
+      "m_theft_april.js\n",
+      "m_theft_may.js\n",
+      "m_theft_june.js\n",
+      "m_theft_july.js\n",
+      "m_theft_aug.js\n",
+      "m_theft_sep.js\n",
+      "m_theft_oct.js\n",
+      "m_theft_nov.js\n",
+      "m_theft_dec.js\n",
+      "theft_jan.js\n",
+      "theft_feb.js\n",
+      "theft_mar.js\n",
+      "theft_april.js\n",
+      "theft_may.js\n",
+      "theft_june.js\n",
+      "theft_july.js\n",
+      "theft_aug.js\n",
+      "theft_sep.js\n",
+      "theft_oct.js\n",
+      "theft_nov.js\n",
+      "theft_dec.js\n",
+      "m_theft_jan.js\n",
+      "m_theft_feb.js\n",
+      "m_theft_mar.js\n",
+      "m_theft_april.js\n",
+      "m_theft_may.js\n",
+      "m_theft_june.js\n",
+      "m_theft_july.js\n",
+      "m_theft_aug.js\n",
+      "m_theft_sep.js\n",
+      "m_theft_oct.js\n",
+      "m_theft_nov.js\n",
+      "m_theft_dec.js\n",
+      "theft_jan.js\n",
+      "theft_feb.js\n",
+      "theft_mar.js\n",
+      "theft_april.js\n",
+      "theft_may.js\n",
+      "theft_june.js\n",
+      "theft_july.js\n",
+      "theft_aug.js\n",
+      "theft_sep.js\n",
+      "theft_oct.js\n",
+      "theft_nov.js\n",
+      "theft_dec.js\n",
+      "m_theft_jan.js\n",
+      "m_theft_feb.js\n",
+      "m_theft_mar.js\n",
+      "m_theft_april.js\n",
+      "m_theft_may.js\n",
+      "m_theft_june.js\n",
+      "m_theft_july.js\n",
+      "m_theft_aug.js\n",
+      "m_theft_sep.js\n",
+      "m_theft_oct.js\n",
+      "m_theft_nov.js\n",
+      "m_theft_dec.js\n",
+      "theft_jan.js\n",
+      "theft_feb.js\n",
+      "theft_mar.js\n",
+      "theft_april.js\n",
+      "theft_may.js\n",
+      "theft_june.js\n",
+      "theft_july.js\n",
+      "theft_aug.js\n",
+      "theft_sep.js\n",
+      "theft_oct.js\n",
+      "theft_nov.js\n",
+      "theft_dec.js\n",
+      "m_theft_jan.js\n",
+      "m_theft_feb.js\n",
+      "m_theft_mar.js\n",
+      "m_theft_april.js\n",
+      "m_theft_may.js\n",
+      "m_theft_june.js\n",
+      "m_theft_july.js\n",
+      "m_theft_aug.js\n",
+      "m_theft_sep.js\n",
+      "m_theft_oct.js\n",
+      "m_theft_nov.js\n",
+      "m_theft_dec.js\n",
+      "theft_jan.js\n",
+      "theft_feb.js\n",
+      "theft_mar.js\n",
+      "theft_april.js\n",
+      "theft_may.js\n",
+      "theft_june.js\n",
+      "theft_july.js\n",
+      "theft_aug.js\n",
+      "theft_sep.js\n",
+      "theft_oct.js\n",
+      "theft_nov.js\n",
+      "theft_dec.js\n",
+      "m_theft_jan.js\n",
+      "m_theft_feb.js\n",
+      "m_theft_mar.js\n",
+      "m_theft_april.js\n",
+      "m_theft_may.js\n",
+      "m_theft_june.js\n",
+      "m_theft_july.js\n",
+      "m_theft_aug.js\n",
+      "m_theft_sep.js\n",
+      "m_theft_oct.js\n",
+      "m_theft_nov.js\n",
+      "m_theft_dec.js\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
-    "\n",
-    "for year in range(2005,2017):\n",
-    "    data = 'var y_' + str(year) + ' = ['\n",
+    "data = 'var dataB = ['\n",
+    "for year in range(2011,2017):\n",
+    "    \n",
     "    ordered_names = ['theft_jan.js','theft_feb.js','theft_mar.js','theft_april.js',\n",
     "                'theft_may.js','theft_june.js','theft_july.js','theft_aug.js',\n",
     "                'theft_sep.js','theft_oct.js','theft_nov.js','theft_dec.js',\n",
@@ -259,13 +411,10 @@
     "        reader.close()\n",
     "        print(file)\n",
     "        \n",
-    "    writer = open('y_' + str(year) +'.js','w')\n",
+    "    writer = open('halfB.js','w')\n",
     "    writer.write(data + '];')\n",
     "    writer.close()\n",
-    "with open('test.js','w') as f:\n",
-    "    reader = open('./datamound/data_2005-theft_jan.js')\n",
-    "    f.write('var jan = [' + reader.read() +'];' )\n",
-    "    reader.close()\n"
+    "\n"
    ]
   }
  ],
